@@ -1776,6 +1776,7 @@ skipitem(const char **p_format, va_list *p_va, int flags)
 	case 'D': /* complex double */
 #endif
 	case 'c': /* char */
+	case 'C': /* unicode char */
 		{
 			(void) va_arg(*p_va, void *);
 			break;
