@@ -270,6 +270,9 @@ Core and Builtins
 C-API
 -----
 
+- Issue #7414: 'C' code wasn't being skipped properly (for keyword arguments)
+  in PyArg_ParseTupleAndKeywords.
+
 - Issue #6624: yArg_ParseTuple with "s" format when parsing argument with
   NUL: Bogus TypeError detail string.
 
